--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "noImplicitAny": false,
+    "downlevelIteration": true,
+    "strictFunctionTypes": false,
   },
   "include": [
     "src"
