--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name _;
 
-    root /usr/src/app;
+    root /var/www/app/public;
     index index.html;
 
     location / {
