updates Nginx Conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,8 @@
 server {
-    listen 80;
+    listen ${PORT:-80};
     server_name _;
 
-    root /var/www/app/public;
+    root /usr/share/nginx/html;
     index index.html;
 
     location / {
