--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
-    listen ${PORT:-80};
-    server_name _;
+    listen 80;
+   
 
     root /usr/share/nginx/html;
     index index.html;
