--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/jest": "^24.0.0",
     "@types/moment": "^2.13.0",
     "@types/node": "^12.0.0",
+    "@types/pretty-format": "^24.3.0",
     "@types/react": "^16.9.0",
+    "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
@@ -35,7 +37,9 @@
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
+    "pretty-format": "^26.5.2",
     "react": "^16.13.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
@@ -52,7 +56,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.ts{,x}",
-    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -78,5 +84,16 @@
     "*.{js,ts,tsx}": [
       "eslint --fix"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@storybook/addon-actions": "^6.0.26",
+    "@storybook/addon-essentials": "^6.0.26",
+    "@storybook/addon-links": "^6.0.26",
+    "@storybook/node-logger": "^6.0.26",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.26",
+    "babel-loader": "^8.1.0",
+    "react-is": "^16.13.1"
   }
 }
