updates engine config

--- a/package.json
+++ b/package.json
@@ -95,5 +95,9 @@
     "@storybook/react": "^6.0.26",
     "babel-loader": "^8.1.0",
     "react-is": "^16.13.1"
+  },
+  "engines" : { 
+    "npm" : ">=6.14.16 <6.14.17",
+    "node" : ">=12.22.12 <12.22.13"
   }
 }
